--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,15 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.44.0",
     "autoprefixer": "^10.4.16",
-    "axios": "^1.6.2",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
-    "chart.js": "^4.4.0",
+    "html-to-image": "^1.11.11",
     "html2pdf.js": "^0.10.1",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.9.0",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.17.0",
@@ -31,7 +30,9 @@
     "recharts": "^2.9.2",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "^3.3.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-chartjs-2": "^2.12.2",
+    "chart.js": "^3.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
